chore: update pkg entry in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chatgpt-toolbox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "pre-commit": "lint-staged",
     "lint": "eslint src",
