--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@dev2mafia/chatgpt-toolbox",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
+    "compile": "tsc",
     "publish": "npm publish --access public",
     "pre-commit": "lint-staged",
     "lint": "eslint src",
@@ -18,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "curlconverter": "^4.5.0",
+    "debug": "^4.3.4",
     "fetch-cookie": "^2.1.0",
     "hpagent": "^1.2.0",
     "lodash": "^4.17.21",
@@ -34,12 +36,10 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "debug": "^4.3.4",
     "eslint": "^8.36.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
-    "tsup": "^6.6.3",
     "typescript": "^5.0.2"
   },
   "lint-staged": {
